[tool.poetry]
name = "blog"
version = "0.1.0"
description = "blog"
authors = ["ZakharEliseev <63101158+ZakharEliseev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
Django = "^4.1.5"
SQLAlchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
